# nv_experiments

./: .gitignore  README.md
20260108_pr13724_pipeline_benchmark/: BENCHMARK_REPORT.md  extract_metrics.py  generate_comparison_chart.py  profile_mapper.sh  profile_mapper_v2.sh  profile_mapper_v3.sh  run_all_tests.sh  run_batch.sh  run_benchmark.sh  run_phase2_16p16g_nomem.sh  run_profile.sh
20260108_pr13724_pipeline_benchmark/batch_results/: summary_20260109_203504.txt  summary_20260109_203701.txt
20260108_pr13724_pipeline_benchmark/profiles/: baseline_16p16g_20260109_142738_wall.html  mapper_phase2_20260109_135432_wall.html  phase2_16p16g_20260109_142910_wall.html  phase3_16p16g_20260109_180420_wall.html  stage1_executor_task_flamegraph.html
20260108_pr13724_pipeline_benchmark/results/: PR13724_baseline_16p16g_154747.txt  PR13724_baseline_16p16g_171419.txt  PR13724_baseline_16p16g_173614.txt  PR13724_baseline_16p16g_181535.txt  PR13724_baseline_16p16g_205816.txt  PR13724_baseline_16p16g_231352.txt  PR13724_baseline_16p32g_210006.txt  PR13724_baseline_16p48g_210248.txt  PR13724_baseline_1p1g_183758.txt  (+47 more)
20260109_python_udf_benchmark/: README.md  REPORT.md  benchmark.py  spark_style_simulation.py
20260110_java_embedded_python/: .gitignore  EMBEDDED_PYTHON_PROPOSAL.md  batch_size_benchmark.py  build.sh  build_arrow.sh  embed_vs_cross_benchmark.py  embed_vs_cross_final.py  python_socket_worker_v2.py  python_socket_worker_v3.py  realistic_benchmark_v3.py  run_arrow_benchmark.sh  run_benchmark.sh
20260110_java_embedded_python/cpp/: CMakeLists.txt  embedded_python.cpp
(+8 files in other folders)
